CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

project(libopencm3)

set( LIBOPENCM3_INCLUDE_DIRS 
    ${CMAKE_CURRENT_SOURCE_DIR}/include/
	${CMAKE_CURRENT_SOURCE_DIR}/include/libopencm3/stm32/${STM32_FAMILY_LOWER}
    PARENT_SCOPE)

set( LIBOPENCM3_STM32_LIBRARY libopencm3_stm32${STM32_FAMILY_LOWER}.a)
set( LIBOPENCM3_STM32_SCRIPT libopencm3_stm32${STM32_FAMILY_LOWER}.ld)

set( LIBOPENCM3_LINKER_FLAGS "-L${CMAKE_CURRENT_SOURCE_DIR}/${OPENCM3_DIR}/lib")
set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} --static -nostartfiles")
#set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -T${CMAKE_CURRENT_SOURCE_DIR}/${OPENCM3_DIR}/lib/${LIBOPENCM3_STM32_SCRIPT}")
#FIXME
#set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -T${CMAKE_CURRENT_SOURCE_DIR}/src/stm32f3-discovery.ld")
set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} ${ARCH_FLAGS}")
#set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -Wl,-Map=$(*).map")
set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -mthumb")
set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -Wl,--gc-sections")
set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS}" PARENT_SCOPE)

#TODO verbose
#ifeq ($(V),99)
#set( LIBOPENCM3_LINKER_FLAGS "${LIBOPENCM3_LINKER_FLAGS} -Wl,--print-gc-sections")
#endif


if(NOT TARGET ${PROJECT_NAME}wrp)
include(ExternalProject)
ExternalProject_Add(${PROJECT_NAME}wrp
        DOWNLOAD_COMMAND ""
        UPDATE_COMMAND ""
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
	BUILD_IN_SOURCE 1
	BUILD_ALWAYS 1
	CONFIGURE_COMMAND ""
        BUILD_COMMAND "make" "TARGETS=${MCU_VENDOR_LOWER_CASE}/${MCU_FAMILY_LOWER_CASE} all" "-j4" "CFLAGS+=${EXTRA_C_FLAGS}" "FP_FLAGS=${FP_FLAGS}"
	INSTALL_COMMAND ""
	)

#https://stackoverflow.com/questions/15160149/cmake-linking-to-an-imported-library-with-dependencies-fails
ADD_LIBRARY(${PROJECT_NAME} STATIC IMPORTED GLOBAL)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/${LIBOPENCM3_STM32_LIBRARY})
add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}wrp)
set(LIBOPENCM3_LIBRARY ${PROJECT_NAME} PARENT_SCOPE)
endif()

